--- a/greeting-config.yml
+++ b/greeting-config.yml
@@ -1,10 +1,10 @@
 security:
   basic:
-    enabled: false
+    enabled: true
 
 management:
   security:
-    enabled: false
+    enabled: true
 
 logging:
   level:
@@ -12,6 +12,6 @@ logging:
       pivotal: DEBUG
 
 greeting:
-  displayFortune: true
+  displayFortune: false
 
 quoteServiceURL: http://quote-service-dev.cfapps.io/quote
