decreaed log level

--- a/greeting-config-qa.yml
+++ b/greeting-config-qa.yml
@@ -1,13 +1,17 @@
 security:
   basic:
     enabled: false
+
 management:
   security:
     enabled: false
+
 logging:
   level:
     io:
-      pivotal: DEBUG
+      pivotal: INFO
+
 greeting:
   displayFortune: true
+
 quoteServiceURL: http://quote-service-qa.cfapps.io/quote
